--- a/css/style.css
+++ b/css/style.css
@@ -72,6 +72,11 @@ a {
 }
 
 /* titles */
+.section-title {
+  margin: 1rem 0 4rem;
+  font-size: 2rem;
+}
+
 .pre-title {
   text-decoration: uppercase;
   letter-spacing: 0.5rem;
@@ -92,6 +97,13 @@ a {
   display: block;
   left: 0;
   top: 50%;
+}
+
+/* layout */
+.grid-3 {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+  gap: 3rem;
 }
 
 /* logo and navigation menu */
@@ -171,4 +183,43 @@ a {
   .hero-right img {
     display: flex;
     justify-content: center;
+  }
+
+  /* Swervices Section */
+  #services {
+    background-color: var(--secondaryBackgroundColor);
+    padding: var(--sectionPadding)
+  }
+
+  .services .pre-title {
+    margin: 0 auto;
+  }
+
+  .services-title {
+    text-align: center;
+  }
+
+  .services {
+    padding: 3rem 2rem;
+    text-align: center;
+    background: var(--primaryBackgroundColor);
+    border-radius: var(--itemBorderRadius);
+  }
+
+  .services h4 {
+    margin: 1.5rem 0;
+    font-weight: 500;
+    font-size: 1.05rem;
+  }
+
+  .services-icon {
+    background: var(--secondaryBackgroundColor);
+    width: fit-content;
+    margin: 0 auto;
+    padding: 1rem 1.3rem;
+    border-radius: 0.5rem;
+  }
+
+  .services-icon svg {
+    fill: red;
   }
