--- a/css/style.css
+++ b/css/style.css
@@ -78,7 +78,7 @@ a {
 }
 
 .pre-title {
-  text-decoration: uppercase;
+  text-transform: uppercase;
   letter-spacing: 0.5rem;
   color: var(--secondaryTextColor);
   position: relative;
@@ -99,9 +99,10 @@ a {
   top: 50%;
 }
 
-/* layout */
+/* layouts */
 .grid-3 {
   display: grid;
+  /* grid-template-columns: 1fr 1fr 1fr; use this first, use code below when its time for explaining responsive design part */
   grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
   gap: 3rem;
 }
@@ -157,32 +158,38 @@ a {
     right: 35px;
   }
 
-  /* hero secion */
+  /* hero section */
+
   #hero {
     height: 720px;
     display: grid;
     grid-template-columns: 1fr 1fr;
+    /* We're not going to use automatic template columns, because we need to know when the columns is go below. So we can exchange the order of the element */
     align-items: center;
   }
 
+  .hero-left {
+    text-align: left;
+    max-width: 90%;
+    position: relative;
+    top: 50px;
+  }
   .hero-name {
     font-size: 3rem;
     font-weight: 700;
     margin: 0.5rem 0 1rem;
-
   }
 
   .hero-name span {
     color: red;
   }
 
-  .hero-right img {
-    width: 90%;
-  }
-
-  .hero-right img {
+  aside.main-container {
     display: flex;
     justify-content: center;
+    width: 100%;
+    justify-content: flex-end;
+    right: 0;
   }
 
   /* Swervices Section */
@@ -339,3 +346,101 @@ a {
     line-height: 2rem;
     padding: 0 1rem;
   }
+
+  /* contact section */
+  #contact {
+    padding: var(--sectionPadding);
+  }
+
+  .contact {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
+    gap: 3rem;
+  }
+
+  .contact-form div {
+    margin-bottom: 1.4rem;
+  }
+
+  .contact-form input, .contact-form textarea {
+    width: 100%;
+    padding: 0.75rem 1.3rem;
+    font-family: "Roboto", sans-serif;
+    background: var(--secondaryBackgroundColor);
+    border: 1px solid var(--borderColor);
+    border-radius: 3px;
+    resize: none;
+  }
+
+  .contact-form imput::placeholder, .contact-form textarea::placeholder {
+    color: #9d9fa1;
+  }
+
+  .contact-form input:focus,
+  .contact-form textarea:focus {
+    outline: none;
+    border: 1px solid #7d7d7d
+  }
+
+  .btn-submit {
+    width: 100%;
+    padding: 0.75rem 1.3rem;
+    background-color: red;
+    color: #fff;
+    border: none;
+    border-radius: 3px;
+    cursor: pointer;
+    transition: 0.2s ease-in-out;
+  }
+
+  .btn-submit:hover {
+    background: #8B0000;
+  }
+
+  .contact-item {
+    display: flex;
+    gap: 1.5rem;
+    margin-bottom: 2.5rem;
+  }
+
+  .contact-item-icon {
+    background: var(--thirdBackgroundColor);
+    width: 53px;
+    height: 53px;
+    border-radius: 9px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .contact-item-icon svg {
+    fill: red;
+  }
+
+  .contact-item-detail h4 {
+    margin-bottom: 0.6rem;
+  }
+
+  /*footer section */
+  footer {
+    padding: 4rem 0;
+    background-color: var(--secondaryBackgroundColor);
+    text-align: center;
+  }
+
+  .footer-icons {
+    margin-bottom: 1rem;
+  }
+
+  .footer-icons a {
+    margin: 0 0.5rem
+  }
+
+  .footer-icons svg {
+    fill: #3e3f40;
+  }
+
+  .footer-icons a:hover svg{
+    fill: #000;
+  }
+ 
